Prevents overflow issues with right side container

--- a/client/watch-party/src/pages/PartyRoom/PartyRoom.css
+++ b/client/watch-party/src/pages/PartyRoom/PartyRoom.css
@@ -11,6 +11,8 @@
 }
 
 * {
+    min-width: 0;
+    min-height: 0;
     box-sizing: border-box;
 }
 
